tests/fixtures/effect-compiler/errors/EFX2602.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
}%

CCProgram vs %{
  precision mediump float;
  layout(binding = 666) uniform sampler2D t;
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
